--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
         // Greet the User
         alert("Hello!");
 
-        // Ask the user for their name
-        var yourName = prompt("What is your name?");
+        // Ask the user how are they feeling
+        var yourName = prompt("how are you?");
 
-        // Ask user what their favorite food is
-        var food = prompt("What is your favorite food?");
-        alert("I like " + food + ", too");
+        // Ask user what is their favorite movie is
+        var food = prompt("What is your favorite movie?");
+        alert("I like " + title + ", too");
 
-        // Ask user if they would like to share their food
-        var shareFood = confirm("Let's eat?");
+        // Ask user if they would like to movie together
+        var shareFood = confirm("Let's go see the movie?");
 
         // If the user clicks "OK"
         if (shareFood === true) {
-          alert("Thank you!");
+          alert("I'll wait for you at the Cinema 1!");
         }
 
         // If the user clicks "cancel"
