--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         var shareFood = confirm("Let's go see the movie?");
 
         // If the user clicks "OK"
-        if (shareFood === true) {
+        if (sure === true) {
           alert("I'll wait for you at the Cinema 1!");
         }
 
